test/cases/good/extra012.lat
int main() {
    if(true);
    if(false);
    while(false);
    printInt(1);
    return 0;
}
