test/cases/bad/bad056.lat
// Invalid void use

int main() {
    void x;
    return 0;
}